--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="user-space">
             <div class="user-icon-wrapper"><i class="fa-solid fa-credit-card"></i></div>
-        <input type="number"  number" id="id number" placeholder="ID Number" required>
+        <input type="number"  name="id number" id="id number" placeholder="ID Number" required>
         </div>
         <br>
         <p><strong>The sky is the limit</strong></p>
